# f1-telemetry-lab

./: .clang-format  .clangd  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
cpp/: CMakeLists.txt  README.md
cpp/src/: bindings.cpp  corners.cpp  corners.hpp  delta.cpp  delta.hpp
cpp/tests/: test_corners.cpp  test_delta.cpp
docker/: Dockerfile
packaging/: f1lab.spec  icon.icns  launch.py  make_icon.py
src/f1lab/: README.md  __init__.py  __main__.py  _native.pyi  analysis.py  bench.py  compare_laps.py  corners.py  logs.py  native.py  paths.py
src/f1lab/gui/: __init__.py  __main__.py  app.py
tests/: test_analysis.py  test_bench.py  test_compare_laps.py  test_corners.py  test_gui.py  test_logs.py  test_native.py  test_native_parity.py  test_paths.py
